Changed title, fixed mobile overflow-x bug

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,7 +1,3 @@
-body{
-  overflow-x: hidden;
-}
-
 .navbar {
     background: linear-gradient(90deg, rgb(28, 27, 27) 0%, rgb(26, 23, 23) 100%);
     height: 80px;
@@ -20,6 +16,7 @@ body{
     align-items: center;
     height: 80px;
     max-width: 1500px;
+    overflow-x: hidden; 
   }
   
   .nav-menu {
@@ -68,7 +65,7 @@ body{
     transition: all 0.2s ease-out;
   } 
 
-  @media screen and (max-width: 960px) {
+  @media all and (max-width: 960px) {
     .NavbarItems {
       position: relative;  
     }
